[package]
name = "mev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
anyhow = "1.0"
tokio = { version = "1.23.0", features = ["full", "macros"] }
tokio-stream = { version = "0.1", features = ['sync'] }
hex = "0.4.3"
log = "0.4.17"
