[package]
name = "mev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
anyhow = "1.0"
tokio = { version = "1.23.0", features = ["full", "macros"] }
tokio-stream = { version = "0.1", features = ['sync'] }
hex = "0.4.3"
url = "2.3.1"
bytes = "1.2.1"
rand = "0.8.5"
reqwest = "0.11"
serde_json = "1.0.68"

# logging
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
colored = "2.0.0"
